--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Erica+One');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:700');
 
 @import 'base/reset';
 
@@ -7,7 +7,3 @@
 
 @import 'components/container';
 
-body
-{
-    background-color: $color-black;
-}
